--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@
 html {
   font-size: calc(16 / 360 * 100vw);
 
-  /* @media (width >= 50rem) {
+  @media (width >= 48rem) {
     font-size: calc(16 / 800 * 100vw);
   }
 
@@ -60,9 +60,9 @@ html {
     font-size: calc(16 / 1280 * 100vw);
   }
 
-  @media (width >= 108rem) {
+  @media (width >= 120rem) {
     font-size: 16px;
-  } */
+  }
 }
 
 @layer components {
@@ -85,5 +85,48 @@ html {
     &:focus-visible svg {
       @apply filter-[drop-shadow(1px_1px_0px_#2F8AF9)];
     }
+  }
+
+  /* 3D Card Flip */
+  .card-container {
+    perspective: 1000px;
+    cursor: pointer;
+  }
+
+  .card {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+  }
+
+  .card-face {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    user-select: none;
+    pointer-events: none;
+  }
+
+  .card-front {
+    z-index: 2;
+  }
+
+  .card-back {
+    transform: rotateY(180deg);
+  }
+
+  /* Ensure container has height for absolute children */
+  .card-container {
+    position: fixed;
+  }
+
+  .card-container > .card {
+    position: absolute;
+    inset: 0;
   }
 }
