Try to disable draggin on the card

--- a/src/style.css
+++ b/src/style.css
@@ -110,6 +110,9 @@ html {
     -webkit-backface-visibility: hidden;
     user-select: none;
     pointer-events: none;
+
+    -webkit-user-drag: none;
+    -webkit-touch-callout: none;
   }
 
   .card-front {
